datasets/dataset_txt/mitmproxy/mitmproxy_1278.txt
command-tab commented on 10 Nov 2015
I'm attempting to install mitmproxy 0.14 on OS X 10.10.5 under a Homebrew install of Python 2.7.10, and am getting a syntax error in setup.py:
$ python --version
Python 2.7.10
$ pip install mitmproxy
Collecting mitmproxy
  Using cached mitmproxy-0.14.0.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 20, in <module>
      File "/private/var/folders/2x/k12t17w5197cvg68_xrp1xsh00058y/T/pip-build-Gt72j1/mitmproxy/setup.py", line 17
        "netlib>=%s, <%s" % (version.MINORVERSION, version.NEXT_MINORVERSION),
                                                                             ^
    SyntaxError: invalid syntax

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /private/var/folders/2x/k12t17w5197cvg68_xrp1xsh00058y/T/pip-build-Gt72j1/mitmproxy
I had mitmproxy 0.13 installed up until I ran into the error, successfully uninstalled it, but that did not affect whether or not I received the error. Is my setup missing something?
Thanks!